# sgsim

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: check_bonds.py  debug_small.py  dense_phase_sep.py  g3bp1_rna_phase_sep.py  multicomponent.py  usp10_competition.py
scripts/: run_production_rtx3090.py  run_sim_only.py
sgsim/: __init__.py  analysis.py  binding.py  conformational.py  energy.py  io.py  parameters.py  partition.py  setup.py  simulate.py  space.py  topology.py  types.py  utils.py
tests/: test_analysis.py  test_binding.py  test_conformational.py  test_energy.py  test_partition.py  test_setup.py  test_simulate.py
