[project]
name = "sgsim"
version = "0.1.0"
description = "Stress Granule Coarse-Grained Simulator"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.20",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "zarr>=2.16",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.4.20"]
dev = ["pytest>=7.0", "pytest-xdist"]

[tool.setuptools.packages.find]
include = ["sgsim*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
